--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "license": "ISC",
     "devDependencies": {
         "node-sass": "^4.13.0"
+    },
+    "dependencies": {
+        "lightbox2": "^2.11.1"
     }
 }
